
0.9.19:	2005-Sep-04

	* A proper solution to circular references. No kludge flags
	  should be necessary anymore to produce reference-free code:
	  recursive dependencies are resolved automatically.
	* Test cases 73 & 92 keep track of various circular references.
	* Introduced compiler directives to allow finer control over the
	  generated code ("--<ASN1C...>--" in comments), (Test case 93).

0.9.18:	2005-Aug-14

	* The obsolete X.208 syntax is handled gracefully now (compound types'
	  member names are invented on the fly). (Test case 87).
	* Generating enumeration tables for INTEGER types (Test case 88).
	* Generating enumeration tables for BIT STRING types (Test case 89).
	* Conditional INTEGER/ENUMERATED representation: long vs. INTEGER_t
	  type is chosen based on PER visible constraints (Test cases 90, 91).
	* Union structures for CHOICE type are not anonymous anymore.
	* Made unber(1) program more verbose: effective structure length is
	  now displayed as L="<n>" at the closing tag. (Test check-xxber.sh).
	* Fixed unber(1)'s -1 switch for indefinite encoding length.
	* New command line option for unber(1): -m to enable minimalistic mode.

0.9.17:	2005-Aug-07

	* Tagging mode is implicitly IMPLICIT if AUTOMATIC TAGS is used, #30.6.
	  (Test cases 55, 86).
	* Started to use extern "C" {} in skeleton headers.
	* Introduced -finline-choice command line option to fix
	  yet another class of circular references.

0.9.16:	2005-July-04

	* GeneralizedTime API now supports fractions of seconds.
	  Thanks to Bent Nicolaisen <BN@JAI.com> for support.
	* ASN.1 parser has been tweaked to allow parsing something like
	  "SEQUENCE----comment----", which is ambiguous for many reasons.
	* XER decoder better handles not-yet-defined future extensions.

0.9.15: 2005-July-02

	* Compiler now checks 64-bit overflows in constraints range handling
	  code. No effect on the code produced by the compiler.
	* Compiler support for tagged and marked parametrized members.